# airflow-pytest-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dco.yml  release.yml  scorecard.yml  testpypi.yml
examples/: example_dag.py
requirements/: build.txt  dev.txt  ui.txt
scripts/: make_demo.py  make_screenshots.py
src/airflow_pytest_plugin/: __init__.py  config.py  flaky_core.py  layout.py  models.py  notifications.py  plugin.py  retention.py  version.py
src/airflow_pytest_plugin/compat/: __init__.py  airflow.py
src/airflow_pytest_plugin/producer/: __init__.py  archiving_parser.py
src/airflow_pytest_plugin/sources/: __init__.py  base.py  filesystem.py
src/airflow_pytest_plugin/web/: __init__.py  __main__.py  app.py  templates.py
src/airflow_pytest_plugin/web/routes/: __init__.py  common.py  compare.py  failures.py  flaky.py  monitoring.py  reports.py
tests/: conftest.py  test_archiving_parser.py  test_authz_integration.py  test_compat.py  test_config.py  test_e2e_flaky_rerun.py  test_filesystem_source.py  test_heatmap.py  test_layout.py  test_metrics.py  test_models.py  test_notifications.py  test_package.py  test_plugin.py  test_retention.py  test_version.py  test_web_app.py
tests/ui/: README.md  conftest.py  test_ui_airflow.py  test_ui_heatmap.py  test_ui_regression.py  test_ui_scale.py
